--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ soundfile==0.10.3.post1
 unidecode==1.1.1
 #numba==0.48.0  # breaks install re. llvmlite
 numba
-librosa==0.7.2
+#librosa==0.7.2  # yields error re. numba decorators missing. fixed in newer librosa
+git+https://github.com/librosa/librosa.git
 mpi4py>=3.0.0
