--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ unidecode==1.1.1
 #numba==0.48.0  # breaks install re. llvmlite
 numba
 #librosa==0.7.2  # yields error re. numba decorators missing. fixed in newer librosa
-git+https://github.com/librosa/librosa.git#egg=jukebox
+librosa==0.9.1  
 mpi4py>=3.0.0
