changed =='s in requirements to >='s

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-fire==0.1.3
-tqdm==4.45.0
-soundfile==0.10.3.post1
-unidecode==1.1.1
+fire>=0.1.3
+tqdm>=4.45.0
+soundfile>=0.10.3.post1
+unidecode>=1.1.1
 #numba==0.48.0  # breaks install re. llvmlite
 numba
 #librosa==0.7.2  # yields error re. numba decorators missing. fixed in newer librosa
-librosa==0.9.1  
+librosa>=0.9.1  
 mpi4py>=3.0.0
